--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,23 @@
 @tailwind components;
 @tailwind utilities;
 
-
 input {
-    color: black;
+  color: black;
 }
 
 textarea {
-    color: black;
+  color: black;
 }
+
+.kaushan {
+  font-family: "Kaushan Script", cursive;
+}
+
+.londrina {
+  font-family: "Londrina Shadow", cursive;
+  -webkit-text-stroke: 2px white;        /* outline */
+  -webkit-text-fill-color: transparent;  /* transparent inside */
+  color: transparent;                    /* fallback */
+  /* text-shadow: 2px 2px 6px rgba(0,0,0,0.8); soft shadow */
+}
+
