--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ textarea {
   background-repeat: no-repeat;
 
   box-shadow: 0 0 15px rgba(255, 0, 0, 0.6), 0 0 15px rgba(0, 0, 255, 0.6);
-  text-align: center;
+  /* text-align: center; */
 
   animation: borderMove 6s linear infinite;
 }
